@@ -24,6 +24,8 @@
    plugins to use it.
    Add sci_set_font() to API.
    Update plugin howto.
+ * src/filetypes.c, src/filetypes.h:
+   Remove filetypes_foreach_named().
 
 
 2009-07-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
